--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -7,9 +7,12 @@ toc: true
 Want to make a "security synapse"? That is to say, do you want to make
 conceptual and practical connections in the field of computer security? Check
 out these projects to learn more about how to apply what you are learning in the
-field of computer security! Projects invite you to complete projects in fields
-like fuzzing and cryptography. Each project explores a specific topic in
-connection with content from one of these online textbooks:
+field of computer security! The security survey projects invite you to complete
+work in fields like fuzzing and cryptography. The security summit project offers
+the scaffolding for learners to complete independent research and development in
+the field of computer security. Each project explores a specific topic in
+connection with content from either accessible online resources or one of these
+online textbooks:
 
 - {{< iconify fa6-solid book-open >}} Online textbook called [Computer Systems
 Security: Planning for Success](https://web.njit.edu/~rt494/security/) 
