--- a/slides/weekfourteen/index.qmd
+++ b/slides/weekfourteen/index.qmd
@@ -31,26 +31,24 @@ format:
 
 :::
 
-## Security Vulnerability Management
+## Example: Using SSH Keys on GitHub
 
-::: {.incremental .fade style="margin-top: -0.45em; font-size: 0.85em;"}
+::: {.incremental .fade style="margin-top: -0.45em; font-size: 0.95em;"}
 
-- **Asset**: A resource that is valuable to an organization
-- **Vulnerability**: A weakness in a computer system
-- **Vulnerability management**: A process for identifying, classifying, and
-handling a vulnerability in a computer system
-- **Threat**: A potential danger to an asset in a computer system
-- **Risk**: The likelihood of a threat exploiting a vulnerability
-- **Countermeasure**: A way to reduce the computer security risk
+- **Step 1**: Generate a new SSH key
+- **Step 2**: Add the SSH key to your GitHub account
+- **Step 3**: Run an SSH agent in the background
+- **Step 4**: Clone a repository using SSH
 
 :::
 
 ::: {.fragment .boxed-content .fade style="margin-top: -0.25em; font-size: 0.80em;"}
 
-- {{< iconify fa6-solid people-line >}} **In-Class Discussion**: What is a
-complete example of these concepts?
-  - Identify the asset and its importance to computer security
-  - Identify the threat to this asset and ways to mitigate it
+- {{< iconify fa6-solid people-line >}} **In-Class Discussion**:
+  - What program(s) did you use to complete these steps?
+  - Does this use symmetric or asymmetric cryptography?
+  - How does this different from using a password?
+  - What are the trade-offs of these different approaches?
 
 :::
 
