--- a/slides/weekfourteen/index.qmd
+++ b/slides/weekfourteen/index.qmd
@@ -179,7 +179,7 @@ def affine_encrypt(plaintext, a, b):
     ciphertext = ""
     for char in plaintext:
         if char.isalpha():
-            # convert character to 0-25 range
+            # convert character to 0 to 25 range
             x = ord(char.lower()) - ord('a')
             # apply affine transformation
             encrypted_char = (a * x + b) % 26
@@ -210,7 +210,7 @@ def affine_decrypt(ciphertext, a, b):
     a_inv = mod_inverse(a, 26)
     for char in ciphertext:
         if char.isalpha():
-            # convert character to 0-25 range
+            # convert character to 0 to 25 range
             y = ord(char.lower()) - ord('a')
             # apply inverse affine transformation
             decrypted_char = (a_inv * (y - b)) % 26
@@ -226,3 +226,27 @@ def affine_decrypt(ciphertext, a, b):
 decrypted = affine_decrypt(encrypted, a, b)
 print(f"Decrypted: {decrypted}")
 ```
+
+## Recapping the Affine Cipher
+
+::: {.fragment .callout-note icon=false title="Lessons Learned about Affine Cipher" style="margin-top: 0em;"}
+
+::: incremental
+
+- Affine ciphers can encrypt and decrypt messages
+- Affine ciphers use modular arithmetic and inverses
+
+- Code segment from the encryption function:
+  - `encrypted_char = (a * x + b) % 26`
+
+- Code segment from the decryption function:
+  - `decrypted_char = (a_inv * (y - b)) % 26`
+
+- Importantly, it is vulnerable to frequency analysis attacks
+- However, it illustrates role of modular arithmetic and primes!
+
+- Any questions about the `encrypt` or `decrypt` functions?
+
+:::
+
+:::
