feat: Add an extra sentences as a leading point in the slides/weekfourteen/index.qmd.

--- a/slides/weekfourteen/index.qmd
+++ b/slides/weekfourteen/index.qmd
@@ -318,6 +318,7 @@ print(f"Decrypted: {decrypted}")
 
 ::: incremental
 
+- Functionality for both encryption and decryption
 - Vigenere ciphers use a repeating key to shift letters
 
 - Code segment from the encryption function:
