fix: Correct a capitalization mistake in schedule/weekthirteen/index.qmd.

--- a/schedule/weekthirteen/index.qmd
+++ b/schedule/weekthirteen/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Security Vulnerabilities"
-description: "What Are best Practices for Handling Vulnerabilities?"
+description: "What Are Best Practices for Handling Vulnerabilities?"
 date: "2024-11-18"
 layout: full
 toc: true
