--- a/schedule/weekfourteen/index.qmd
+++ b/schedule/weekfourteen/index.qmd
@@ -11,12 +11,15 @@ toc-expand: 3
 
 - {{< iconify fa6-solid book-open size=18px >}} Read chapters thirteen through
 twenty in [Cracking Codes with Python](https://inventwithpython.com/cracking/)
+- {{< iconify fa6-solid book-open size=18px >}} Review all prior chapters in
+[Computer Systems Security: Planning for
+Success](https://web.njit.edu/~rt494/security/)
 
 ## Activities
 
 - {{< iconify fa6-solid diagram-project size=18px >}} **Monday**: Laboratory session
-- {{< iconify fa6-solid people-line size=18px >}} **Tuesday and Thursday**:
-Security Solutions
+- {{< iconify fa6-solid people-line size=18px >}} **Tuesday**:
+Cryptography Review
   - Explore terms and concepts in security vulnerability management
   - Complete a case study on the topic of secrets in GitHub repositories
   - Learn more about common vulnerabilities and exposures (CVEs)
@@ -27,12 +30,13 @@ Security Solutions
     - In-class activity that connects concepts to real-world scenarios
     - Hands-on examples of methods for assess security vulnerabilities
     - Demonstrate the use of a practical approach to vulnerabilities
+- **No class on Thursday due to Thanksgiving Break**
 
 ## Slides
 
 ```{=html}
-<iframe class="slide-deck" src="../../slides/weekthirteen/"></iframe>
+<iframe class="slide-deck" src="../../slides/weekfourteen/"></iframe>
 ```
 
 {{< iconify majesticons presentation-play size=18px >}} Full Screen: [Week
-Thirteen: Security Vulnerabilities](../../slides/weekthirteen/)
+Fourteen: Revisiting Cryptography](../../slides/weekfourteen/)
