--- a/schedule/weekfourteen/index.qmd
+++ b/schedule/weekfourteen/index.qmd
@@ -20,16 +20,14 @@ Success](https://web.njit.edu/~rt494/security/)
 - {{< iconify fa6-solid diagram-project size=18px >}} **Monday**: Laboratory session
 - {{< iconify fa6-solid people-line size=18px >}} **Tuesday**:
 Cryptography Review
-  - Explore terms and concepts in security vulnerability management
-  - Complete a case study on the topic of secrets in GitHub repositories
-  - Learn more about common vulnerabilities and exposures (CVEs)
-  - Understand how to use the common vulnerability scoring system (CVSS)
+  - Review terms and concepts in the field of cryptography
+  - Complete a case study on the use of SSH keys with GitHub
+  - Learn more about the Affine and Vigenere ciphers
+  - Explore use of frequency analysis for breaking ciphers
   - Continued highlighting of the concept of a "security synapse"
   - Student presentations that feature:
-    - Explanation of a high-level concepts behind security scanning
-    - In-class activity that connects concepts to real-world scenarios
-    - Hands-on examples of methods for assess security vulnerabilities
-    - Demonstrate the use of a practical approach to vulnerabilities
+    - Explanation of a high-level concepts behind cryptography
+    - Since there is only one class students need not program
 - **No class on Thursday due to Thanksgiving Break**
 
 ## Slides
