fix: Add a reminder about the final in-person assessment in schedule/index.qmd.

--- a/schedule/index.qmd
+++ b/schedule/index.qmd
@@ -41,6 +41,7 @@ listing:
   - **Weeks**: Twelve through sixteen
   - **Chapters**: Seven through ten in [CSP](https://web.njit.edu/~rt494/security/) and selected chapters from [CCP](https://inventwithpython.com/cracking)
   - **Final Examination**: Week sixteen during the final examination period
+  - **In-Person Assessment Three**: Week sixteen during the final examination period
 
 ### Week-by-Week Highlights
 
