fix: Correct a capitalization mistake in schedule/weekfourteen/index.qmd.

--- a/schedule/weekfourteen/index.qmd
+++ b/schedule/weekfourteen/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Revisiting Cryptography"
-description: "How does cryptography fit into modern software?"
+description: "How Does Cryptography Fit into Modern Software?"
 date: "2024-11-25"
 layout: full
 toc: true
