--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -326,7 +326,7 @@ Synapse Discord Server](https://discord.gg/juUXz7d4Jh).
 - {{< iconify fa6-solid book-open size=18px >}} **Study**: Since this project
 invites learners to propose and conduct their own independent project, it is
 important that they should read, in addition to any relevant online resources,
-all of the chapters in the following textbooks:
+all of the covered chapters in the following textbooks:
   - {{< iconify fa6-solid book-open >}} [Computer Systems Security: Planning
   for Success](https://web.njit.edu/~rt494/security/) 
   - {{< iconify fa6-solid book-open >}} [Cracking Codes with
