--- a/slides/weekfifteen/index.qmd
+++ b/slides/weekfifteen/index.qmd
@@ -52,3 +52,14 @@ format:
     - How do you design and implement a secure virtual machine?
 
 :::
+
+# Trade-offs between virtual machines and software containers?
+
+::: incremental
+
+- Virtual machines are often resource intensive
+- Containers share the host operating system
+- Containers are often lightweight and fast
+- {{< iconify fa6-solid lightbulb >}} **What are the security downsides of containers?**
+
+:::
